# The-Crown

./: .gitignore  README.md  TODO.md
QNT-Blue/: .gitignore  README.md  reproduction_test.cpp
QNT-Blue/QuantumCompute/Bin64/QuantumMeshDLL/: AI_FPS_Demo.cpp  AdaptiveStressDemo.cpp  CMakeLists.txt  CMakeLists.txt.old  CMakeListsApp.txt  CMakeListsService.txt  EnhancedSampleApp.cpp  GrainUpscaleDemo.cpp  IMPLEMENTATION_SUMMARY.md  QBitStressDemo.cpp  QuantumMeshBoost.cpp  QuantumMeshBoost.def.in  QuantumMeshBoost.h  QuantumRenderService.cpp  README.md  SampleApp.cpp  TestCompleteSystem.cpp  VR_FarRendering_Demo.cpp  build.bat  build_service.bat  build_service_simple.bat  build_simple.bat  compile.rsp  config.ini  demonstrate_enhancements.py  install_background_service.bat  service_manager.bat  test_adaptive_stress.bat  test_adaptive_stress.cpp  test_ai_fps.bat  test_ai_fps.cpp  test_enhanced_api.cpp  test_grain_upscale.bat  test_grain_upscale.cpp  test_lighting_shadows.cpp  test_qbit_stress.bat  test_qbit_stress.cpp  test_quantum_state_manipulation.cpp  test_vr_far_rendering.bat  test_vr_far_rendering.cpp  (+5 more)
QNT-Blue/QuantumCompute/JJ enhancement/: AdjustSmartProtocolSpendControl.ps1  CMakeLists.txt  COMPLETE_QUANTUM_SYSTEM_IMPLEMENTATION.md  COMPREHENSIVE_SYSTEM_ENHANCEMENT_SUMMARY.md  CompleteQEtherSpeedOptimizer.ps1  DISPLAY_PORT_OPTIMIZATION_VERIFICATION.txt  DirectFiberConnectionOptimizer.ps1  ENHANCEMENT_SUMMARY.md  FINAL_IMPLEMENTATION_CONFIRMATION.md  FINAL_SYSTEM_VERIFICATION.md  FRAME_STABILIZATION_ACHIEVEMENT.txt  FRAME_STABILIZATION_SUMMARY.md  FixNetworkAdapterSpeed.ps1  GPU_FUSION_VERIFICATION.txt  HYPERPATH_RENDERING_SYSTEM.md  IMPLEMENTATION_COMPLETE.txt  ImprovedQEtherService.ps1  IntegratedPulsarQEtherSystem.ps1  JITTER_ELIMINATION_VERIFICATION.txt  LIGHT_ACHIEVEMENT_UNLOCKED.txt  LIGHT_TRANSMISSION_ACHIEVEMENT.md  LIGHT_TRANSMISSION_VERIFICATION.txt  MonitorAndOptimizeNetwork.ps1  OptimizeNetworkWithQEther.ps1  PREVIOUS_WORK_SUMMARY.md  PRODUCTION_SYSTEM_SUMMARY.md  PROJECT_TIMELINE.md  ProperQEtherService.ps1  PulsarEnergyOptimizer.ps1  QETHER_ACHIEVEMENT.md  QETHER_ACHIEVEMENT_UNLOCKED.txt  QETHER_ENHANCED_SUMMARY.md  QETHER_GLOBAL_TRACE_ACHIEVEMENT.md  QETHER_GLOBAL_TRACE_VERIFICATION.txt  QETHER_SELF_MANAGEMENT_ACHIEVEMENT.md  QETHER_SELF_MANAGEMENT_VERIFICATION.md  QETHER_SUMMARY.md  QETHER_VERIFICATION.txt  QEtherOSLevelService.ps1  QEtherServiceManager.ps1  (+57 more)
QNT-Blue/QuantumCompute/JJ enhancement/docs/: BIOLOGICAL_INTEGRATION.md  BODY_MAPPING_SYSTEM.md  BODY_MAPPING_SYSTEM_COMPLETE.md  CONNECTION_DIAGNOSTICS.md  CORTICAL_MAPPING.md  EXTREME_OPTIMIZATION_FEATURES.md  FINAL_INTEGRATION_SUMMARY.md  GENOMIC_ENHANCEMENT_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  INTEGRATED_SYSTEM_REPORT.md  JJ_EXTREME_OPTIMIZATION_COMPLETE.md  JJ_EXTREME_OPTIMIZATION_REPORT.md  JJ_NEURAL_ENHANCEMENT_COMPLETE.md  JJ_PROCESSING_UNIT_REPORT.md  NEURAL_ENHANCEMENT_COMPLETE.md  NEURAL_ENHANCEMENT_SYSTEM.md  NEURAL_INTEGRATION.md  NEURAL_SCHEMA_ENHANCEMENT.md  REALITY_MANIPULATION.md  VISUALIZATION_FEATURES.md
QNT-Blue/QuantumCompute/JJ enhancement/output/: balanced_bandwidth_report.txt  cosmic_tracking_report.txt  display_port_optimization_report.txt  gpu_fusion_performance_report.txt  hyperpath_rendering_report.txt  hyperpath_system_integration_report.txt  light_manipulation_report.txt  light_transmission_optimization_report.txt  network_optimization_results.txt  qether_self_management_demo.txt  quantum_state_container_report.txt  realistic_bandwidth_report.txt  secure_internet_report.txt  unlimited_light_report.txt
QNT-Blue/QuantumCompute/JJ enhancement/production/: ProductionDemo.cpp  deploy_production_system.ps1  verify_production_system.ps1
QNT-Blue/QuantumCompute/JJ enhancement/production/bandwidth/: RealisticBandwidthManagerProd.cpp  RealisticBandwidthManagerProd.h
QNT-Blue/QuantumCompute/JJ enhancement/production/network/: QEtherNetworkProd.cpp  QEtherNetworkProd.h
QNT-Blue/QuantumCompute/JJ enhancement/production/security/: SecureInternetOptimizerProd.cpp  SecureInternetOptimizerProd.h
QNT-Blue/QuantumCompute/JJ enhancement/src/: BiologicalIntegrationDemo.cpp  BiologicalIntegrationSystem.cpp  BiologicalIntegrationSystem.h  BodyMappingDemo.cpp  BodyMappingSystem.cpp  BodyMappingSystem.h  BrainSimulationDemo.cpp  CoherentLearningDemo.cpp  ComprehensiveTestingDemo.cpp  ContinuousEvolutionDemo.cpp  CorticalMappingDemo.cpp  CosmicQuantumDemo.cpp  CosmicQuantumTracking.cpp  CosmicQuantumTracking.h  DisplayPortDemo.cpp  DisplayPortOptimizer.cpp  DisplayPortOptimizer.h  ExtremeOptimizationDemo.cpp  FinancialModelingDemo.cpp  FinancialModelingSystem.cpp  FinancialModelingSystem.h  GPUComputeGraphicsFusion.cpp  GPUComputeGraphicsFusion.h  GPUFusionDemo.cpp  GeniusMemoryDemo.cpp  GenomicEnhancementDemo.cpp  GenomicEnhancementSystem.cpp  GenomicEnhancementSystem.h  HyperpathRenderingDemo.cpp  HyperpathRenderingSystem.cpp  HyperpathRenderingSystem.h  LightManipulationEngine.cpp  LightManipulationEngine.h  LightTransmissionDemo.cpp  LightTransmissionOptimizer.cpp  LightTransmissionOptimizer.h  NeuralEnhancementDemo.cpp  NeuralEnhancementSystem.cpp  NeuralEnhancementSystem.h  NeuralIntegrationDemo.cpp  (+30 more)
QNT-Blue/QuantumCompute/SDK/: CMakeLists.txt  quantum_compiler.cpp  quantum_compiler.h  quantum_translator.cpp  quantum_translator.h  test_main.cpp  translator_demo.cpp
QNT-Blue/QuantumCompute/Samples/: CMakeLists.txt  build_vr_demo.bat  quantum_integration.py  quantum_optimizer.qs  quantum_translator_demo.py  vr_compatibility_demo.cpp
QuantumEnergyService/: ARMOR_BIOS_OPTIMIZATION_SERVICE.md  ArmorBiosOptimizationService.cs  ArmorBiosOptimizationServiceInstaller.Designer.cs  ArmorBiosOptimizationServiceInstaller.cs  Ask_Future_Real.cs  Auto_Acceleration_Summary.txt  BiosCommunicationModule.cs  ContactFutureSelf.cs  CosmicQubitManagementService.cs  CosmicQubitService.InstallLog  CosmicQubitServiceInstaller.cs  CosmicQubitSimple.cs  CosmicQubitWindowsService.Designer.cs  CosmicQubitWindowsService.cs  CosmicReport.txt  CosmicWorldExplorer.cs  ENERGY_COOLING_SERVICE_README.md  (+172 more)
(+375 files in other folders)
